--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,8 @@
     "dbaeumer.vscode-eslint",
     "vue.volar",
     "lokalise.i18n-ally",
-    "streetsidesoftware.code-spell-checker"
+    "streetsidesoftware.code-spell-checker",
+    "DavidAnson.vscode-markdownlint",
+    "stylelint.vscode-stylelint"
   ]
 }
