--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production pnpm run build:packages",
     "build:check": "pnpm run security:check",
-    "build:packages": "pnpm run build:lens",
+    "build:packages": "pnpm run build:lens & pnpm run lint --fix",
     "build:lens": "pnpm --filter theme-lens build",
     "build:demo": "npm -C demo run build",
     "ci:publish": "pnpm -r publish --access public --no-git-checks",
